// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageContainer matches snapshot for default props 1`] = `
<DocumentFragment>
  <div
    class="dark min-h-screen bg-gradient-to-br from-gray-900 via-gray-800 to-gray-900"
  >
    <main
      class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 py-6 sm:py-8 lg:py-12"
    >
      <div>
        Test Content
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`PageContainer matches snapshot with custom props 1`] = `
<DocumentFragment>
  <div
    class="dark min-h-screen bg-gradient-to-br from-gray-900 via-gray-800 to-gray-900"
  >
    <main
      class="mx-auto max-w-5xl custom-wrapper"
    >
      <div>
        Custom Content
      </div>
    </main>
  </div>
</DocumentFragment>
`;
